--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,13 @@ button:hover {
 }
 
 nav a.active {
+  color: #84ffde;
   font-weight: 700;
   text-decoration: underline;
+}
+
+@media screen and (min-width: 768px) {
+  nav a.active {
+    color: #0a7558;
+  }
 }
